--- a/web-app/templates/index.html
+++ b/web-app/templates/index.html
@@ -11,8 +11,17 @@
         <div class="col-md-4">
             <div class="row">
                 <div class="col-md-12">
-                    <h2>Form</h2>
+                    <h2>Input</h2>
                     <form action="">
+                        <div class="form-group">
+                            <label for="class-types">Choose a Classifier</label>
+                            <select id="classifier" name="classifier" class="form-control" required>
+                                <option value="">Select</option>
+                                {% for c in classifiers %}
+                                <option value="{{ c.id }}">{{ c.description }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
                         <div class="form-group">
                             <label for="area-types">Choose an Area Type</label>
                             <div class="form-check" id="area-types">
@@ -57,6 +66,9 @@
             {% if prediction %}
             <hr>
             <h4>Prediction: {{ prediction }}</h4>
+            {% if points %}
+                <p>{{ points.features|length }} incident(s) over last 10 days</p>
+            {% endif %}
             {% endif %}
         </div>
         <div class="col-md-8">
@@ -64,14 +76,14 @@
             <div id="map"></div>
             <script type="text/javascript" >
                 $(function () {
-
                     var mymap = L.map("map", {
                         center: [{{ y }}, {{ x }}], 
                         zoom: 15,
                         zoomControl: false,
                         doubleClickZoom: false,
                         dragging: false,
-                        boxZoom: false
+                        boxZoom: false,
+                        scrollWheelZoom: false
                     });
                     
                     L.tileLayer('https://stamen-tiles-{s}.a.ssl.fastly.net/toner-lite/{z}/{x}/{y}{r}.{ext}', {
@@ -87,7 +99,22 @@
                     current_area.addTo(mymap);
                     mymap.fitBounds(current_area.getBounds());
                     {% endif %}
-                    
+
+                    {% if points %}
+                    var inc = L.geoJSON({{ points|safe }}, {
+                        pointToLayer: function(feature, latlng) {
+                            return new L.CircleMarker(latlng, {
+                                radius: 3,
+                                fillColor: "red",
+                                color: "#000",
+                                weight: 1,
+                                opacity: 1,
+                                fillOpacity: 1
+                            });
+                        }
+                    });
+                    inc.addTo(mymap);
+                    {% endif %}
                     var uri;
                     var atype;
                     $("input[type=radio][name='area-type']").on("change", function() {
@@ -130,6 +157,7 @@
                     $hide.addClass("invisible");
                     $hide.prop("required", false);
                     $hide.val("");
+                    $("#classifier").val("{{ selected_classifier }}");
                 });
             </script>
         </div>
