--- a/web-app/templates/index.html
+++ b/web-app/templates/index.html
@@ -58,7 +58,7 @@
                             </select>
                         </div>
                         <div class="form-group text-center">
-                            <button class="btn btn-md btn-success" type="submit">Predict</button>
+                            <button id="submit-btn" class="btn btn-md btn-success" type="submit">Predict</button>
                         </div>
                     </form>
                 </div>
@@ -158,7 +158,15 @@
                     $hide.prop("required", false);
                     $hide.val("");
                     $("#classifier").val("{{ selected_classifier }}");
+
+                    $( "form" ).submit(function( event ) {
+                        $("#submit-btn").html("<i class='fas fa-spinner fa-spin'></i>")
+                        .prop("disabled", true);
+        
+                    });
                 });
+
+
             </script>
         </div>
     </div>
