--- a/web-app/templates/index.html
+++ b/web-app/templates/index.html
@@ -165,6 +165,7 @@
         
                     });
                 });
+                $("#home").addClass("active");
 
 
             </script>
