--- a/web-app/templates/about.html
+++ b/web-app/templates/about.html
@@ -9,7 +9,7 @@
         <div class="col-md-12">
             <h1>About</h1>
             <p>This application attempts to use different data modeling techniques to predict a likely crime for a given
-                district/neighborhood on a given data/time.</p>
+                district/neighborhood on a given date/time.</p>
             <p>Our data was sourced from <a href="https://www.opendataphilly.org/">Open Data Philly</a>.</p>
             <p>The source of this application may be found at our <a
                     href="https://github.com/cfh294/philly-crime">github</a>.</p>
