--- a/web-app/templates/layout.html
+++ b/web-app/templates/layout.html
@@ -36,6 +36,7 @@
             <div class="navbar-nav">
                 <a id="home" class="nav-item nav-link" href="/">Home</a>
                 <a id="about" class="nav-item nav-link" href="/about">About</a>
+                <a id="models" class="nav-item nav-link" href="/models">Models</a>
             </div>
         </div>
     </nav>
