--- a/web-app/templates/about.html
+++ b/web-app/templates/about.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block page_name %}About{% endblock %}
 {% block add_head %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/map.css') }}" />
 <script type="text/javascript" src="{{ url_for('static', filename='js/leaflet-ajax.min.js') }}"></script>
