--- a/web-app/templates/layout.html
+++ b/web-app/templates/layout.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Philadelphia Crime Predictor</title>
+    <title>Philly Crime | {% block page_name %}{% endblock %}</title>
     <script src="https://kit.fontawesome.com/c82918c2ca.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
