--- a/web-app/templates/about.html
+++ b/web-app/templates/about.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block page_name %}About{% endblock %}
+{% block page_name %}About Us{% endblock %}
 {% block add_head %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/map.css') }}" />
 <script type="text/javascript" src="{{ url_for('static', filename='js/leaflet-ajax.min.js') }}"></script>
@@ -8,7 +8,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h1>About</h1>
+            <h1>About Us</h1>
             <p>This application attempts to use different data modeling techniques to predict a likely crime for a given
                 district/neighborhood on a given date/time.</p>
             <p>Our data was sourced from <a href="https://www.opendataphilly.org/">Open Data Philly</a>.</p>
