--- a/web-app/templates/layout.html
+++ b/web-app/templates/layout.html
@@ -35,8 +35,8 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a id="home" class="nav-item nav-link" href="/">Home</a>
-                <a id="about" class="nav-item nav-link" href="/about">About</a>
-                <a id="models" class="nav-item nav-link" href="/models">Models</a>
+                <a id="about" class="nav-item nav-link" href="/about">About Us</a>
+                <a id="models" class="nav-item nav-link" href="/models">Model Info</a>
             </div>
         </div>
     </nav>
