--- a/web-app/templates/models.html
+++ b/web-app/templates/models.html
@@ -1,8 +1,11 @@
 {% extends "layout.html" %}
-{% block page_name %}Models{% endblock %}
+{% block page_name %}Model Info{% endblock %}
 {% block content %}
 <div class="row">
     <div class="col-md-12">
+        <h1>Model Info</h1>
+        <p>Below you'll find the models that we're using to predict crime and save the future, along with thier accuracy
+            percentage.</p>
         <table class="table table-striped">
             <thead>
                 <tr>
