Update to models page

--- a/web-app/templates/models.html
+++ b/web-app/templates/models.html
@@ -4,8 +4,8 @@
 <div class="row">
     <div class="col-md-12">
         <h1>Model Info</h1>
-        <p>Below you'll find the models that we're using to predict crime and save the future, along with thier accuracy
-            percentage.</p>
+        <p>Below you'll find the models that we're using to predict crime, thier accuracy percentage, and when they were
+            last generated.</p>
         <table class="table table-striped">
             <thead>
                 <tr>
@@ -28,4 +28,7 @@
         </table>
     </div>
 </div>
+<script>
+    $("#models").addClass("active");
+</script>
 {% endblock %}
