--- a/web-app/templates/index.html
+++ b/web-app/templates/index.html
@@ -86,7 +86,7 @@
         <div class="col-md-8">
             <h2>Map</h2>
             <div id="map"></div>
-            <script type="text/javascript" nonce="{{ csp_nonce() }}">
+            <script type="text/javascript">
                 $(function () {
                     var mymap = L.map("map", {
                         center: [{{ y }}, {{ x }}], 
