--- a/web-app/templates/layout.html
+++ b/web-app/templates/layout.html
@@ -27,16 +27,18 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/">Philly Crime</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a id="home" class="nav-item nav-link" href="/">Home</a>
-                <a id="about" class="nav-item nav-link" href="/about">About Us</a>
-                <a id="models" class="nav-item nav-link" href="/models">Model Info</a>
+        <div class="container">
+            <a class="navbar-brand" href="/">Philly Crime</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a id="home" class="nav-item nav-link" href="/">Home</a>
+                    <a id="about" class="nav-item nav-link" href="/about">About Us</a>
+                    <a id="models" class="nav-item nav-link" href="/models">Model Info</a>
+                </div>
             </div>
         </div>
     </nav>
